Refactor CodeQL workflow and update agent documentation
- Simplified CodeQL workflow name and adjusted cron schedule.
- Updated analysis step names for clarity.
- Enhanced timeout settings for specific languages in CodeQL.
- Removed unnecessary comments and cleaned up the workflow file.
- Revised agent documentation for clarity and conciseness, including
build commands and environment requirements.
- Updated constants to final utility classes to improve code structure.
- Added envelope encryption implementation details to the changelog and
README.