@@ -1,88 +1,106 @@
-# SecPwdMan Developer Guide for Agents
+# SecPwdMan — Agent Guide
 
-This document outlines the build processes, code style guidelines, and conventions for the SecPwdMan project. Agents operating in this codebase must adhere strictly to these rules.
+## Build & Run
 
-## 1. Build & Test Commands
+```
+gradlew build               # compile + test + jar
+gradlew classes             # compile only
+gradlew run                 # run the application
+gradlew nativeCompile       # GraalVM native image (requires GraalVM JDK)
+```
 
-The project uses **Gradle** as the build system. Use the wrapper (`./gradlew` or `gradlew.bat`) for all operations.
+- **Java 25** required. Toolchain is auto-provisioned via `foojay-resolver-convention` for normal builds. `nativeCompile` requires GraalVM 25; on Windows it also requires MSVC (Visual Studio).
+- Native image output: `build/native/nativeCompile/SecPwdMan`
+- **Configuration cache is disabled** (`org.gradle.configuration-cache=false`). Do not enable it.
+- **SWT artifact is resolved at Gradle configuration time** from `os.name`/`os.arch`. Unsupported OS or arch throws `GradleException` immediately — not at link time.
+- On non-Windows, `ForeignRegistrationFeature` and `Win32Affinity` are excluded from the JAR automatically.
+- `gradlew.bat` uses CRLF on Windows; `gradlew` is forced LF via `.gitattributes` — never convert it.
 
-### Common Commands
-- **Build Project:** `gradlew build`
-- **Compile Only:** `gradlew classes`
-- **Run Application:** `gradlew run`
-- **Run All Tests:** `gradlew test` (Runs both unit and integration tests)
-- **Clean:** `gradlew clean`
+## Testing
 
-### Testing
-Tests are split into `unitTest` and `integrationTest` tasks, but standard `test` runs both.
-- **Run Unit Tests Only:** `gradlew unitTest`
-- **Run Integration Tests Only:** `gradlew integrationTest`
-- **Run a Single Test Class:**
-  ```bash
-  gradlew test --tests "io.github.seerainer.secpwdman.path.to.TestClass"
-  ```
-- **Run a Specific Test Method:**
-  ```bash
-  gradlew test --tests "io.github.seerainer.secpwdman.path.to.TestClass.methodName"
-  ```
+Tests are **tag-based**, all in one source set (`src/test`):
 
-### Environment
-- **Java Version:** 25 (Preview features may be enabled/required).
-- **UI Framework:** SWT (Standard Widget Toolkit).
-- **Native Image:** The project supports GraalVM native image generation (`gradlew nativeCompile`).
+| Task | Tags | Notes |
+|---|---|---|
+| `gradlew test` | `unit` + `integration` | Runs both |
+| `gradlew unitTest` | `unit` only | |
+| `gradlew integrationTest` | `integration` only | 10-min task timeout |
+| `gradlew allTests` | both, sequential | CI command |
 
-## 2. Code Style & Conventions
+`gradlew build` and `gradlew check` both trigger `unitTest` + `integrationTest`.
 
-### Formatting & Structure
-- **Indentation:** Use **4 spaces** for indentation.
-- **Line Endings:** Preserve existing line endings.
-- **Copyright Header:** All new Java files **MUST** include the GPLv3 copyright header found in existing files (e.g., `Main.java`).
-- **Imports:**
-  - Avoid wildcard imports (`import java.util.*;`).
-  - Order: Standard Java, Third-party, Project imports.
+**Do not infer tag from class name:**
+- `CSVParserTests` → `@Tag("integration")`
+- `CSVParserBenchmark` → `@Tag("integration")`
+- `SecureMemoryTest` → `@Tag("integration")`
+- `CryptoTest` → `@Tag("unit")`
+- `SecPwdManIntegrationTest` → `@Tag("integration")`
 
-### Java Modernization & Typing
-- **Type Inference:** Use `final var` for local variables where the type is obvious.
-  ```java
-  final var mainUI = new MainWindow(display, args); // Correct
-  MainWindow mainUI = new MainWindow(display, args); // Avoid
-  ```
-- **Final:** Prefer immutability. Mark local variables and parameters as `final` where possible.
-- **Java 25:** You may use modern Java features available up to version 25.
+Run a focused test (use `test`, `unitTest`, or `integrationTest` depending on the tag):
+```
+gradlew test --tests "io.github.seerainer.secpwdman.crypto.CryptoTest"
+gradlew test --tests "io.github.seerainer.secpwdman.crypto.CryptoTest.methodName"
+```
 
-### Project Specific Patterns
-- **Constants:** The project uses the "Constant Interface" pattern (e.g., `implements PrimitiveConstants, StringConstants`).
-- **Logging:**
-  - **Do not** use `System.out.println`.
-  - Use the project's wrapper: `io.github.seerainer.secpwdman.util.LogFactory`.
-  - Usage: `LogFactory.getLog().info(...)` or `LogFactory.getLog().error(...)`.
-- **UI (SWT):**
-  - UI logic resides in `io.github.seerainer.secpwdman.ui`.
-  - Ensure SWT resources (Colors, Fonts, Images) are disposed of properly if they are not system resources.
-  - Follow the `Display` and `Shell` management patterns seen in `Main.java`.
+Test JVM quirks (already configured in `build.gradle`, do not duplicate):
+- 4 GB max heap — OOM possible on constrained machines
+- `--enable-native-access=ALL-UNNAMED` required (Foreign Memory API)
+- `--add-opens` for `java.lang`, `java.security`, `javax.crypto`
+- Parallel execution enabled by default
+- `java.awt.headless=true` set as system property
 
-### Error Handling
-- Exceptions should be caught and logged using `LogFactory`.
-- Do not swallow exceptions without logging.
-- Use `try-with-resources` for I/O operations to ensure proper closing of streams.
+## Code Style
 
-### Naming Conventions
-- **Classes:** PascalCase (`MainWindow`, `SecureMemory`).
-- **Methods/Variables:** camelCase (`getDisplay`, `startTime`).
-- **Constants:** UPPER_SNAKE_CASE (`APP_NAME`, `START_TIME`).
-- **Package:** `io.github.seerainer.secpwdman` (lowercase).
+No automated formatter or linter — conventions are not build-enforced.
 
-## 3. Directory Structure
-- `src/main/java`: Application source code.
-- `src/main/resources`: Non-Java resources (properties, icons, metadata).
-- `src/test/java`: JUnit 5 tests.
-- `src/test/resources`: Test data and configuration.
+- **Indentation:** 4 spaces (tabs in existing resource-heavy files are legacy).
+- **Copyright header:** All new Java files must include the GPLv3 header from existing files.
+- **Imports:** No wildcard imports. `static` imports first (individual, not wildcard where feasible), then standard Java, third-party, project.
+- **Local variables:** `final var` where type is clear from the RHS.
+- **Logging:** Use `io.github.seerainer.secpwdman.util.LogFactory`, never `System.out`. Pattern: `private static final Logger LOG = LogFactory.getLog();`
 
-## 4. Third-Party Libraries
-- **SWT:** For native UI components.
-- **Password4j:** For password hashing/encryption primitives.
-- **NanoJSON:** For JSON parsing.
-- **ZXCVBN:** For password strength estimation.
-- **SLF4J:** For logging facade.
+## Constants
 
-When adding new functionality, check if an existing library already provides it before suggesting new dependencies.
+Constants live in **`final` utility classes** (not interfaces) with a private constructor. Access via `static import`:
+
+```java
+import static io.github.seerainer.secpwdman.config.PrimitiveConstants.*;
+import static io.github.seerainer.secpwdman.config.StringConstants.*;
+import static io.github.seerainer.secpwdman.crypto.CryptoConstants.*;
+import static io.github.seerainer.secpwdman.config.Icons.*;
+```
+
+Do **not** use `implements` on these classes — they are not interfaces.
+
+## Package Map
+
+```
+io.github.seerainer.secpwdman
+  (root)          Main — entry point, Display/Shell init
+  action/         Action (abstract base) + EditAction, FileAction, ViewAction
+  config/         PrimitiveConstants, StringConstants, Icons (final util classes)
+                  ConfigData (runtime config state), Messages (i18n loader)
+  crypto/         CryptoConstants (final util class), Crypto, CryptoConfig,
+                  encryption strategies (AES, ChaCha20), KDF strategies (Argon2, PBKDF2, scrypt)
+  csv/            CSVParser and supporting types
+  io/             File I/O, JSON serialization, ByteContainer
+  ui/             SWT dialogs and MainWindow
+  util/           LogFactory, SecureMemory, SWTUtil, URLUtil, RandomPassword, etc.
+```
+
+## SWT Notes
+
+- UI resources (Colors, Fonts, Images) must be disposed if not system resources.
+- Follow `Display`/`Shell` lifecycle in `Main.java`.
+- `SWTUtil.WIN32` and `SWTUtil.DARK` are static booleans for platform/theme branching.
+
+## Dependencies
+
+- **SWT** — native UI (platform artifact selected at build time)
+- **Password4j** — Argon2/scrypt/PBKDF2 key derivation
+- **NanoJSON** — JSON parsing
+- **zxcvbn4j** — password strength
+- **SLF4J + java.util.logging** — logging via `LogFactory`
+- **AssertJ** — test assertions (fluent style, not JUnit `assertEquals`)
+
+Check existing libraries before proposing new dependencies.
